Correct path name to hyperlinks

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li>
-        <a href="Recipes/cholebhature.html">Chole Bhature</a>
+        <a href="recipes/cholebhature.html">Chole Bhature</a>
       </li>
       <li>
-        <a href="Recipes/shake.html">Banana Shake</a>
+        <a href="recipes/shake.html">Banana Shake</a>
       </li>
     </ul>
   </body>
